# webp-converter

./: .gitignore  LICENSE  NOTICE.md  README.md  package-lock.json  package.json
docs/superpowers/plans/: 2026-06-15-video-conversion.md
docs/superpowers/specs/: 2026-06-15-video-conversion-design.md
scripts/: build-and-install.ps1  fetch-ffmpeg.ps1  fetch-ffmpeg.sh
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: converter.rs  lib.rs  main.rs  video.rs
src-tauri/tests/: video_integration.rs
