[package]
name = "webp-converter"
version = "1.0.1"
description = "Batch convert images to WebP for the web"
authors = ["MAGIPA Consulting"]
edition = "2021"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["webp"] }
webp = "0.3"
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
